--- a/240417正态分布模拟.md
+++ b/240417正态分布模拟.md
@@ -1,5 +1,5 @@
 ## 正态分布模拟的实现
-正态分布模拟，调整均值和标准差十分机械繁琐，且确定后还是需要确定映射。不如直接利用标准正态分布进行映射。
+正态分布模拟，调整均值和标准差十分机械繁琐，且确定后还是需要确定映射。不如直接或间接利用标准正态分布进行映射。
 **以0.05为概率分布梯度，对于标准正态部分的累计密度分布如下**
 使用<[标准正态分布表 (shuxuele.com)](https://www.shuxuele.com/data/standard-normal-distribution-table.html)>便捷估量，也可以查标准正态分布概率分布表。<[▷ 正态分布表 (statorials.org)](https://statorials.org/cn/%E6%AD%A3%E6%80%81%E5%88%86%E5%B8%83%E8%A1%A8/)>
 | 累计概率 | Z值 |
@@ -7,20 +7,25 @@
 | 5% | -1.65 |
 | 10% | -1.28 |
 | 15% | -1.04 |
-| 5% | -0.84 |
+| 20% | -0.84 |
 | 25% | -0.685 |
-| 5% | -0.525 |
+| 30% | -0.525 |
 | 35% | -0.385 |
-| 5% | -0.265 |
+| 40% | -0.265 |
 | 45% | -0.125 |
 | 50% | 0 |
 50%以上，镜像取绝对值可获得对应Z值。
 
-虽然不直接使用非标准正态分布模拟数据，但是其概率分布仍然可以作为映射的设定参考。
+~~虽然不直接使用非标准正态分布模拟数据，但是其概率分布仍然可以作为映射的设定参考。~~
+根据标准正态分布的累积概率图，可以倒推具体参数的正态分布概率分布情况，从而避免过多的机械尝试。
 
 ### 处理时的相关问题
 #### 乘系数
 由标准正态分布映射，需要注意乘系数的问题。可能的处理方法有：在映射到具体的评分前，减去平均值，乘以系数、再复原。
+
+对于确定参数，模拟概率分布的需求，将其转换为一道编程题求解：
+题目：对于一个装有连续十九个数的数组，如何划分成五组，使五组内的数字数量逼近要求。分组要求除上下边界外必须连续。
+
 
 
 
@@ -29,5 +34,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMzY1NzQ2MTNdfQ==
+eyJoaXN0b3J5IjpbMTE4ODY0MTQ1NywtMTEzNjU3NDYxM119
 -->
