240417正态分布模拟.md updated from https://stackedit.io/

--- a/240417正态分布模拟.md
+++ b/240417正态分布模拟.md
@@ -24,7 +24,7 @@
 由标准正态分布映射，需要注意乘系数的问题。可能的处理方法有：在映射到具体的评分前，减去平均值，乘以系数、再复原。
 
 对于确定参数，模拟概率分布的需求，将其转换为一道编程题求解：
-题目：对于一个装有连续十九个数的数组，如何划分成五组，使五组内的数字数量逼近要求。分组要求除上下边界外必须连续。
+题目：对于一个装有连续十九个数的数组，如何划分成五组，使五组内的数字最大值与最小值之差几乎相等且数字数量逼近要求。分组要求除上下边界外必须连续。
 
 
 
@@ -34,5 +34,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE4ODY0MTQ1NywtMTEzNjU3NDYxM119
+eyJoaXN0b3J5IjpbLTE3NjU1MjY1ODAsMTE4ODY0MTQ1NywtMT
+EzNjU3NDYxM119
 -->
