240417正态分布模拟.md updated from https://stackedit.io/

--- a/240417正态分布模拟.md
+++ b/240417正态分布模拟.md
@@ -24,7 +24,7 @@
 由标准正态分布映射，需要注意乘系数的问题。可能的处理方法有：在映射到具体的评分前，减去平均值，乘以系数、再复原。
 
 对于确定参数，模拟概率分布的需求，将其转换为一道编程题求解：
-题目：对于一个装有连续十九个数的数组，如何划分成五组，使五组内的数字最大值与最小值之差几乎相等且数字数量逼近要求。fen
+题目：对于一个装有连续十九个数的数组，如何划分成五组，使五组内的数字最大值与最小值之差几乎相等且数字数量逼近要求。分在一次的数字在原数组的位置必须连续。
 
 
 
@@ -34,6 +34,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0Nzg0NDk4OTEsLTE3NjU1MjY1ODAsMT
-E4ODY0MTQ1NywtMTEzNjU3NDYxM119
+eyJoaXN0b3J5IjpbODE0MTQ3NjQ5LC0xNzY1NTI2NTgwLDExOD
+g2NDE0NTcsLTExMzY1NzQ2MTNdfQ==
 -->
