240417正态分布模拟.md updated from https://stackedit.io/

--- a/240417正态分布模拟.md
+++ b/240417正态分布模拟.md
@@ -26,6 +26,11 @@
 对于确定参数，模拟概率分布的需求，将其转换为一道编程题求解：
 题目：对于一个装有连续十九个数的数组，如何划分成五组，使五组内的数字最大值与最小值之差几乎相等且数字数量逼近要求。分在一次的数字在原数组的位置必须连续。
 
+题目：对于一个装有连续十九个数的数组，如何划分成五组，使五组内的数字最大值与最小值之差几乎相等且数字数量逼近要求。分在一次的数字在原数组的位置必须连续，允许忽视第一组与第五组的最大最小值之差或让其字数量不符合要求。
+输入：每一组期待分到的数字数量，数值之间用空格隔开
+ 2 6 6 4 2
+ 0 1 5 8 6
+输出：第二、三、四、五组中的各组的最小数字；以及二三四组最大最小值之差
 
 
 
@@ -34,6 +39,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODE0MTQ3NjQ5LC0xNzY1NTI2NTgwLDExOD
-g2NDE0NTcsLTExMzY1NzQ2MTNdfQ==
+eyJoaXN0b3J5IjpbMTgwOTQ3MTkxNCw4MTQxNDc2NDksLTE3Nj
+U1MjY1ODAsMTE4ODY0MTQ1NywtMTEzNjU3NDYxM119
 -->
