240417正态分布模拟.md updated from https://stackedit.io/

--- a/240417正态分布模拟.md
+++ b/240417正态分布模拟.md
@@ -32,6 +32,11 @@
  0 1 5 8 6
 输出：第二、三、四、五组中的各组的最小数字；以及二三四组最大最小值之差
 
+题目：对于一个装有连续十九个数的数组，如何划分成五组，使中间三组内的数字最大值与最小值之差几乎相等且数字数量逼近要求。分在二三四组的数字在原数组的位置必须连续。
+输入：每二三四组期待分到的数字数量，数值之间用空格隔开
+ 6 6 4
+ 1 5 8
+输出：第二、三、四、五组中的各组的最小数字；以及二三四组最大最小值之差
 
 
 
@@ -39,6 +44,7 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgwOTQ3MTkxNCw4MTQxNDc2NDksLTE3Nj
-U1MjY1ODAsMTE4ODY0MTQ1NywtMTEzNjU3NDYxM119
+eyJoaXN0b3J5IjpbMTc1MjA5NDEyNCwxODA5NDcxOTE0LDgxND
+E0NzY0OSwtMTc2NTUyNjU4MCwxMTg4NjQxNDU3LC0xMTM2NTc0
+NjEzXX0=
 -->
