--- a/240417正态分布模拟.md
+++ b/240417正态分布模拟.md
@@ -38,14 +38,17 @@
  6 6 4
  1 5 8
 输出：第二、三、四、五组中的各组的最小数字；以及二三四组最大最小值之差
-原始
+>原始数组为：
+vector<double> arr = { -1.65, -1.28, -1.04, -0.84, -0.685, -0.525, -0.385, -0.265, -0.125, 0 , 0.125 , 0.265 , 0.385 , 0.525 , 0.685 , 0.84 , 1.04 , 1.28 , 1.65 };
+即以5%为单位长度的累计概率梯度分布情况
+
 
 
 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIxMzczMDcxMCwxNzUyMDk0MTI0LDE4MD
+eyJoaXN0b3J5IjpbLTQ0MzUxNjQ4MiwxNzUyMDk0MTI0LDE4MD
 k0NzE5MTQsODE0MTQ3NjQ5LC0xNzY1NTI2NTgwLDExODg2NDE0
 NTcsLTExMzY1NzQ2MTNdfQ==
 -->
