240417正态分布模拟.md updated from https://stackedit.io/

--- a/240417正态分布模拟.md
+++ b/240417正态分布模拟.md
@@ -40,7 +40,7 @@
 输出：第二、三、四、五组中的各组的最小数字；以及二三四组最大最小值之差
 >原始数组为：
 vector<double> arr = { -1.65, -1.28, -1.04, -0.84, -0.685, -0.525, -0.385, -0.265, -0.125, 0 , 0.125 , 0.265 , 0.385 , 0.525 , 0.685 , 0.84 , 1.04 , 1.28 , 1.65 };
-即以5%为单位长度的累计概率梯度分布情况
+即以5%为单位概率的累计概率梯度分布，以5%~95%为范围，对应的19个Z值。
 
 
 
@@ -48,7 +48,7 @@ vector<double> arr = { -1.65, -1.28, -1.04, -0.84, -0.685, -0.525, -0.385, -0.26
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ0MzUxNjQ4MiwxNzUyMDk0MTI0LDE4MD
-k0NzE5MTQsODE0MTQ3NjQ5LC0xNzY1NTI2NTgwLDExODg2NDE0
-NTcsLTExMzY1NzQ2MTNdfQ==
+eyJoaXN0b3J5IjpbNDQ0MDA1NzkwLDE3NTIwOTQxMjQsMTgwOT
+Q3MTkxNCw4MTQxNDc2NDksLTE3NjU1MjY1ODAsMTE4ODY0MTQ1
+NywtMTEzNjU3NDYxM119
 -->
